cập nhật phần verify khi đăng ký

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -4,3 +4,15 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nonglamfreshshop@gmail.com
+spring.mail.password=NL123456
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+jwt.expirationDateInMs=9000000
+jwt.refreshExpirationDateInMs=9000000
+jwt.secretKey=123456789012189092141231231233123554645784895234234135235
