--- a/resources/application.properties
+++ b/resources/application.properties
@@ -16,3 +16,8 @@ spring.mail.properties.mail.smtp.starttls.required=true
 jwt.expirationDateInMs=9000000
 jwt.refreshExpirationDateInMs=9000000
 jwt.secretKey=123456789012189092141231231233123554645784895234234135235
+
+spring.datasource.url=jdbc:mysql://localhost:3307/web_ban_trai_cay
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
